compiler/testData/diagnostics/wasmTests/jsInterop/anonymousInitializer.kt
// RUN_PIPELINE_TILL: FRONTEND
// OPT_IN: kotlin.js.ExperimentalWasmJsInterop

external class A {
    <!EXTERNAL_ANONYMOUS_INITIALIZER!>init {
        definedExternally
    }<!>
}
